--- a/CookieClicker/OptionsWindow.xaml
+++ b/CookieClicker/OptionsWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Options" Height="600" Width="1010" WindowStartupLocation="CenterOwner"
-        WindowStyle="None" ResizeMode="NoResize" Background="DarkGray" AllowsTransparency="True" Opacity="0.85" BorderBrush="SaddleBrown" BorderThickness="5">
+        WindowStyle="None" ResizeMode="NoResize" Background="DarkGray" AllowsTransparency="True" Opacity="0.85" BorderBrush="#6b4532" BorderThickness="5">
     <Window.Resources>
         <Style x:Key="CustomButtonStyle" TargetType="Button">
             <Setter Property="Background" Value="#D3D3D3"/>
