--- a/CookieClicker/MainWindow.xaml
+++ b/CookieClicker/MainWindow.xaml
@@ -204,12 +204,20 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <StackPanel Grid.Column="0" Orientation="Vertical">
-                    <Button Content="Options" FontSize="16" FontWeight="Bold" Background="Transparent" Foreground="White" Margin="0" Click="OptionsButton_Click"/>
-                    <Button Content="Statistiques" FontSize="16" FontWeight="Bold" Background="Transparent" Foreground="White" Margin="0"/>
+                    <Button x:Name="OptionsButton" FontSize="16" FontWeight="Bold" Background="Transparent" Foreground="White" Margin="0" Click="OptionsButton_Click">
+                        <Image Source="pack://application:,,,/Images/Option.png" Stretch="Fill" />
+                    </Button>
+                    <Button x:Name="StatsButton" FontSize="16" FontWeight="Bold" Background="Transparent" Foreground="White" Margin="0">
+                        <Image Source="pack://application:,,,/Images/Statistiques.png" Stretch="Fill" />
+                    </Button>
                 </StackPanel>
                 <StackPanel Grid.Column="2" Orientation="Vertical" HorizontalAlignment="Right">
-                    <Button Content="Infos" FontSize="16" FontWeight="Bold" Background="Transparent" Foreground="White" Margin="0"/>
-                    <Button Content="Héritage" FontSize="16" FontWeight="Bold" Background="Transparent" Foreground="White" Margin="0"/>
+                    <Button x:Name="InfoButton" FontSize="16" FontWeight="Bold" Background="Transparent" Foreground="White" Margin="0">
+                        <Image Source="pack://application:,,,/Images/Info.png" Stretch="Fill" />
+                    </Button>
+                    <Button x:Name="LegacyButton" FontSize="16" FontWeight="Bold" Background="Transparent" Foreground="White" Margin="0">
+                        <Image Source="pack://application:,,,/Images/Heritage.png" Stretch="Fill" />
+                    </Button>
                 </StackPanel>
             </Grid>
         </Grid>
