--- a/CookieClicker/InfoWindow.xaml
+++ b/CookieClicker/InfoWindow.xaml
@@ -107,13 +107,13 @@
                 <TextBlock Text="Le jeu ne possède pas de sauvegarde  !" FontSize="14" Foreground="White" TextWrapping="Wrap" Margin="0,5,0,0"/>
 
                 <TextBlock Text="Historique des versions" FontSize="18" FontWeight="Bold" Foreground="White" Margin="0,20,0,0"/>
-                <TextBlock Text="Note : Les notes de mise à jour ne sont pas précises." FontSize="14" Foreground="Gray" Margin="0,5,0,0"/>
+                <TextBlock Text="Note : Les notes de mise à jour sont fictives." FontSize="14" Foreground="Gray" Margin="0,5,0,0"/>
 
                 <TextBlock Text="29/06/2024 - Début de la création du projet" FontSize="16" FontWeight="Bold" Foreground="LightBlue" Margin="0,10,0,0"/>
                 <TextBlock Text="• Nous avons commencé par crée un digramme de classe pour comprendre les besoins. Nous avons ensuite débuter la création de notre jeu en application WPF" FontSize="14" Foreground="White" TextWrapping="Wrap" Margin="0,5,0,0"/>
 
                 <TextBlock Text="10/06/2024 - Fin du projet" FontSize="16" FontWeight="Bold" Foreground="LightBlue" Margin="0,10,0,0"/>
-                <TextBlock Text="• Nous avos ajouter toutes les classes nécessaires et avons crée un jeu similaire à l'original." FontSize="14" Foreground="White" TextWrapping="Wrap" Margin="0,5,0,0"/>
+                <TextBlock Text="• Nous avons ajouter toutes les classes nécessaires et avons crée un jeu similaire à l'original." FontSize="14" Foreground="White" TextWrapping="Wrap" Margin="0,5,0,0"/>
             </StackPanel>
         </ScrollViewer>
     </Grid>
